@@ -37,6 +37,9 @@ settings:
           world_the_end:
           - users
           - groups
+          all_unnamed_worlds:
+          - users
+          - groups
     #  world2:      (World2 would have it's own set of user and groups files)
     #    world3:
     #    - users    (World3 would use the users.yml from world2, but it's own groups.yml)
